Corrected spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,8 +101,8 @@ li {
 }
 
 #main h1 {
-    font-size: 1.2em;
-    line-height: 1.6em;
+    font-size: 1.8em;
+    line-height: 1.5em;
     letter-spacing: 1px;
     font-weight: normal;
     font-style: normal;
@@ -192,6 +192,12 @@ li {
 .navbar-default .navbar-nav>li>a:hover {
     color: #4780d7;
     text-decoration: underline;
+}
+
+.nav > li > a {padding:10px 12px;}
+
+@media (max-width: 1023px) {
+	.navbar-nav > li > a {padding:10px 5px;}
 }
 
 .bio-image {
